# Framer

./: Cargo.toml
src/: main.rs  utils.rs
src/commands/: mod.rs
src/commands/direct/: mod.rs
src/commands/guild/: mod.rs  music.rs  ping.rs
